2020-01-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-debug-message, tramp-file-name-handler):
	Don't support threads.
	(tramp-mutex, tramp-get-mutex): Remove.

	* tramp-cache.el (tramp-cache-print): Don't support threads.

	* tramp-compat.el (tramp-compat-main-thread)
	(tramp-compat-current-thread, tramp-compat-thread-yield)
	(tramp-compat-with-mutex): Remove.

	* tramp-ftp.el (ange-ftp-ftp-process-buffer): Don't declare.
	(tramp-ftp-file-name-handler): Don't support threads.

2020-01-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-adb.el (tramp-adb-handle-make-process):
	* tramp-sh.el (tramp-sh-handle-make-process): Update stderr buffer
	when process has finished.  Do not call `auto-revert'.

2020-01-09  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-hexdump-encode, tramp-hexdump-awk-encode)
	(tramp-od-encode, tramp-od-awk-encode): New defconst.
	(tramp-awk-encode, tramp-awk-decode): Adapt.
	(tramp-awk-coding-test): Remove.
	(tramp-remote-coding-commands): Add hexdump/awk encoding.  (Bug#35639)
	(tramp-find-inline-encoding): Adapt handling of awk, hexdump and od.
	(tramp-get-remote-busybox, tramp-get-remote-awk)
	(tramp-get-remote-hexdump, tramp-get-remote-od): New defuns.

2020-01-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-local-name): Call `file-local-name' if NAME
	is not a Tramp file name.

2020-01-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-local-name): Remove `save-match-data'.

	* tramp-adb.el (tramp-adb-handle-make-process): Implement `stderr'.

	* tramp-sh.el (tramp-sh-handle-make-process): Flush connection
	properties in time.

2020-01-06  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el: Bump version to 2.4.4-pre.
	(tramp-ignored-file-name-regexp, tramp-time-dont-know)
	(tramp-time-doesnt-exist): Fix typo.
	(tramp-file-local-name, tramp-unquote-file-local-name): New defuns.
	(tramp-completion-make-tramp-file-name): Simplify.